Add preliminary page structure

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e4a002d04e.js" crossorigin="anonymous"></script>
     <title>On the Docket</title>
 </head>
 <body>
     <header>
         <h1>On the Docket</h1>
     </header>
+
+    <div class="main-container">
+        <div class="sidebar">
+
+            <h2>My Tasks</h2>
+                <ul class="my-tasks">
+                    <li><button class="my-task-button">All Tasks</button></li>
+                    <li><button class="my-task-button">Today</button></li>
+                    <li><button class="my-task-button">This Week</button></li>
+                </ul>
+
+            <h2>My Lists</h2>
+                <ul class="my-lists">
+                
+                </ul>
+
+            <button class="new-list-button">New List<i class="fa-solid fa-plus"></i></button>
+
+        </div>
+
+        <div class="content-container">
+
+            <div class="content-header">
+                <h2 class="content-header-text">All Tasks</h2>
+                <button class="new-task-button">New Task<i class="fa-solid fa-plus"></i></button>
+            </div>
+
+            <div class="content">
+
+            </div>
+
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-text">Coded by: <a class="footer-link" href="https://github.com/clouded-afk">clouded-afk<i class="fab fa-github"></i><a></div>
+    </footer>
 </body>
 </html>
