Edit page structure

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <div class="line-divider"></div>
             </div>
                 <ul class="my-tasks">
-                    <li><button class="my-task-button">All Tasks</button></li>
+                    <li><button class="my-task-button active">All Tasks</button></li>
                     <li><button class="my-task-button">Today</button></li>
                     <li><button class="my-task-button">This Week</button></li>
                 </ul>
