Disable autocomplete on forms

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
         <dialog class="list-dialog">
             <div class="form-header">Add New List</div>
-            <form class="list-form">
+            <form class="list-form" autocomplete="off">
 
                 <label for="list-name-input">List Name:</label>
                 <input type="text" id="list-name-input" name="list-name-input">
@@ -72,7 +72,7 @@
     
         <dialog class="task-dialog">
             <div class="form-header">Add New Task</div>
-            <form class="task-form">
+            <form class="task-form" autocomplete="off">
 
                 <label for="task-name-input" class="task-label">Task Name:</label>
                 <input type="text" id="task-name-input" name="task-name-input">
