--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                     <h2 class="content-header-text">All Tasks</h2>
                     <button class="new-task-button">New Task<i class="fa-solid fa-plus"></i></button>
                 </div>
-                <div class="line-divider"></div>
+                <div class="line-divider line-div-content"></div>
             </div>
             
             <div class="content">
