Edit task description input

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
                 <input type="text" id="task-name-input" name="task-name-input">
     
                 <label for="task-description-input" class="task-label">Description:</label>
-                <textarea id="task-description-input" name="task-description-input"></textarea>
+                <textarea id="task-description-input" name="task-description-input" maxlength="300" placeholder="Max Character Count = 300"></textarea>
     
                 <label for="task-due-date" class="task-label">Due Date:</label>
                 <input type="date" id="task-due-date" name="task-due-date">
