Add error message for list input

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 
                 <label for="list-name-input">List Name:</label>
                 <input type="text" id="list-name-input" name="list-name-input">
-                <div class="list-name-error"></div>
+                <div class="list-name-error" style="color: red;">Steve</div>
 
                 <button type="submit" id="list-submit">Submit</button>
 
