--- a/src/index.html
+++ b/src/index.html
@@ -117,9 +117,9 @@
     
                 <label for="edit-priority" class="task-label">Priority:</label>
                 <select id="edit-priority" name="edit-priority">
-                    <option value="low">Low</option>
-                    <option value="medium">Medium</option>
-                    <option value="high">High</option>
+                    <option value="low" style="color: green;">Low</option>
+                    <option value="medium" style="color: orange;">Medium</option>
+                    <option value="high" style="color: red;">High</option>
                 </select>
             </form>
 
